Simplify Vercel routing: fix 404 errors for SPA

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,12 @@
   "installCommand": "cd For-You--Always-main && npm install",
   "routes": [
     {
-      "src": "^/(?!.*\\.).*$",
-      "destination": "/index.html"
+      "src": "/assets/.*",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": ".*",
+      "dest": "/index.html"
     }
   ]
 }
